# soloud

./: CMakeLists.txt
include/: soloud.h  soloud_c.h  soloud_internal.h
src/backend/sdl2_static/: soloud_sdl2_static.cpp
src/c_api/: soloud.def  soloud_c.cpp
src/core/: soloud.cpp
src/tools/codegen/: main.cpp
